# qubrid-cookbook

./: .gitignore  README.md  _config.yml
Agents/OCR_Multilingual_Translation_Agent/: README.md
LLMs/pro_ai_image_creator/: .env.example  .gitignore  README.md  main.py  pyproject.toml
LLMs/pro_ai_image_creator/backend/: graph.py  nodes.py  state.py
LLMs/pro_ai_image_creator/config/: settings.py
LLMs/pro_ai_image_creator/database/: db.py
LLMs/pro_ai_image_creator/frontend/: app.py  sidebar.py  styles.py
LLMs/reasoning_chatbot/: README.md  basic_chat.py  chatbot.py  chatbot_app.py  requirements.txt
Multimodal/medical_prescription_chatbot/: README.md  app.py
Multimodal/medical_prescription_chatbot/backend/: chain.py  qubrid_client.py
Multimodal/medical_prescription_chatbot/frontend/pages/: page_prescription.py  page_schedule.py
Multimodal/nutri_vision_app/: .env.example
Multimodal/vision_chatbot/: .env.example
Notebooks/: Confidence_Aware_RAG.ipynb  Email_Agent_with_HITL.ipynb  Langgraph_Conditional_Workflows.ipynb  Langgraph_Youtube_Agent.ipynb  Tool_using_Agent.ipynb
